{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 30,
  "lineage": "df909312-5619-87ab-0149-f4177832aa53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "revhub_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c0c480fbff5e5d4",
            "arn": "arn:aws:ec2:ap-south-1:026090556302:elastic-ip/eipalloc-09c0c480fbff5e5d4",
            "association_id": "eipassoc-09eec2f2d80f18dfe",
            "domain": "vpc",
            "id": "eipalloc-09c0c480fbff5e5d4",
            "instance": "i-07e6efdc7ee6403fe",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07cbd3014c28eff1d",
            "private_dns": "ip-10-0-1-214.ap-south-1.compute.internal",
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-15-206-120-193.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.120.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "revhub-eip"
            },
            "tags_all": {
              "Name": "revhub-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.revhub_instance",
            "aws_security_group.revhub_sg",
            "aws_subnet.revhub_public_subnet",
            "aws_vpc.revhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "revhub_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:026090556302:instance/i-07e6efdc7ee6403fe",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e6efdc7ee6403fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "revhub-deploy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cbd3014c28eff1d",
            "private_dns": "ip-10-0-1-214.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-13-126-97-82.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.97.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:026090556302:key/ac1be40c-0bdb-4f9e-acb4-bd5bb94fd1a1",
                "throughput": 125,
                "volume_id": "vol-0742149ffe5228b5d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a521a964703744c",
            "tags": {
              "Name": "revhub-instance"
            },
            "tags_all": {
              "Name": "revhub-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0beb682d65ad8599f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.revhub_sg",
            "aws_subnet.revhub_public_subnet",
            "aws_vpc.revhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "revhub_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090556302:internet-gateway/igw-0bd69deeeb2bb734d",
            "id": "igw-0bd69deeeb2bb734d",
            "owner_id": "026090556302",
            "tags": {
              "Name": "revhub-igw"
            },
            "tags_all": {
              "Name": "revhub-igw"
            },
            "vpc_id": "vpc-0181400ae54a9fe0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.revhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "revhub_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090556302:route-table/rtb-0af923a1b72892061",
            "id": "rtb-0af923a1b72892061",
            "owner_id": "026090556302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd69deeeb2bb734d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "revhub-public-rt"
            },
            "tags_all": {
              "Name": "revhub-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0181400ae54a9fe0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.revhub_igw",
            "aws_vpc.revhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "revhub_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e35ed7c91285da7",
            "route_table_id": "rtb-0af923a1b72892061",
            "subnet_id": "subnet-01a521a964703744c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.revhub_igw",
            "aws_route_table.revhub_public_rt",
            "aws_subnet.revhub_public_subnet",
            "aws_vpc.revhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "revhub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090556302:security-group/sg-0beb682d65ad8599f",
            "description": "Security group for RevHub application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beb682d65ad8599f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4205
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "revhub-sg",
            "name_prefix": "",
            "owner_id": "026090556302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revhub-sg"
            },
            "tags_all": {
              "Name": "revhub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0181400ae54a9fe0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.revhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "revhub_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090556302:subnet/subnet-01a521a964703744c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a521a964703744c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090556302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "revhub-public-subnet"
            },
            "tags_all": {
              "Name": "revhub-public-subnet"
            },
            "vpc_id": "vpc-0181400ae54a9fe0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.revhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "revhub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:026090556302:vpc/vpc-0181400ae54a9fe0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05eac0aa796a38bb9",
            "default_route_table_id": "rtb-00fa3d98d58ade7e8",
            "default_security_group_id": "sg-06d7c04569b221ae7",
            "dhcp_options_id": "dopt-0699ba6e26998b6ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0181400ae54a9fe0f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fa3d98d58ade7e8",
            "owner_id": "026090556302",
            "tags": {
              "Name": "revhub-vpc"
            },
            "tags_all": {
              "Name": "revhub-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}